--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <!-- Change the favicon (icon) -->
-    <link rel="icon" href="%PUBLIC_URL%/StthomasLogo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/Untitled design.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
